add namespace config and github authentication